# myMusicPlayer-rs

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT.md  FRONTEND_DESIGN.md  README.md  Rust跨平台桌面音乐播放器概要设计方案.md  Rust跨平台桌面音乐播放器详细设计方案.md  TODO.md  build_config.toml  justfile  rust-toolchain.toml
.artifacts/browser/2026-04-03T17-49-02-269Z-t02-artwork-geometry/: accessibility.md  console.json  network.json  summary.json  timeline.json
.artifacts/browser/2026-04-03T18-16-52-233Z-t03-light-shell/: accessibility.md  pages.json  timeline.json
.artifacts/browser/2026-04-03T18-20-06-454Z-t03-dark-overlay/: accessibility.md  summary.json  timeline.json
.artifacts/browser/2026-04-03T19-23-52-530Z-t05-light-album-detail/: accessibility.md  console.json  network.json  pages.json  summary.json  timeline.json
.artifacts/browser/2026-04-03T19-29-21-671Z-t05-dark-album-detail/: accessibility.md  network.json  pages.json  summary.json  timeline.json
.artifacts/browser/2026-04-03T19-36-55-503Z-session/: s02-theme-proof.timeline.json
.artifacts/browser/2026-04-03T19-44-38-646Z-s02-theme-proof/: accessibility.md  console.json  network.json  pages.json  summary.json
.artifacts/browser/2026-04-03T20-41-28-592Z-t03-settings-maintenance/: accessibility.md  console.json  network.json  summary.json  timeline.json
.artifacts/browser/2026-04-03T20-57-19-068Z-session/: t05-maintenance-timeline.json
.artifacts/browser/2026-04-04T02-28-27-227Z-t05-settings-attention/: accessibility.md  console.json  network.json  pages.json  summary.json
.artifacts/browser/2026-04-04T02-29-03-369Z-t05-shell-cue/: accessibility.md  network.json  summary.json
.artifacts/browser/2026-04-04T02-41-41-396Z-s03-maintenance/: accessibility.md  console.json  network.json  summary.json  timeline.json
.artifacts/native-uat/: M002-S04-maintenance-recovery-proof.md  M002-S04-theme-playback-proof.md
.cargo/: Cargo.toml  config.toml
.github/workflows/: ci.yml  public-ci.yml
.superpowers/brainstorm/49622-1775195892/: .server-info  .server-stopped  visual-direction-v2.html  visual-direction.html
build_helpers/: mod.rs
config/: deny.toml  rust-toolchain.toml  rustfmt.toml
docs/superpowers/plans/: 2026-03-25-songs-list-implementation.md  2026-03-27-library-scan-productization.md  2026-03-29-config-startup-restore-hardening.md  2026-03-30-queue-now-playing.md  2026-03-31-now-playing-lyrics.md  2026-04-01-cover-art-extraction-cache.md  2026-04-03-theme-consistency-redesign.md  2026-04-06-summary-selection-guard.md
docs/superpowers/specs/: 2026-03-25-songs-list-design.md  2026-03-27-library-scan-productization-design.md  2026-03-29-config-startup-restore-hardening-design.md  2026-03-30-queue-now-playing-design.md  2026-03-31-now-playing-lyrics-design.md  2026-04-01-cover-art-extraction-cache-design.md  2026-04-02-incremental-scan-design.md  2026-04-03-theme-consistency-redesign-design.md  2026-04-06-summary-card-selection-guard-design.md
helloagents/: CHANGELOG.md  project.md
helloagents/history/: index.md
helloagents/plan/202603201715_local_lyrics/: task.md
helloagents/wiki/: api.md  arch.md  data.md  overview.md
helloagents/wiki/modules/: backend-audio.md  backend-library.md  backend-playlist.md  frontend-library-views.md  frontend-player.md
packaging/: README.md
packaging/linux/: build-appimage.sh  build-deb.sh
packaging/macos/: build-app.sh  build.sh
packaging/windows/: build.bat  build.ps1  installer.nsi
resources/linux/: music-player.appdata.xml  music-player.desktop
resources/macos/: Info.plist
resources/windows/: icon.rc
scripts/: dev-tools.ps1  dev-tools.sh  dev.ps1  dev.sh  native-uat-resume.sh  test-verify-m003-s01-contract.sh  test-verify-m003-s02-workflow.sh  verify-m002-s04-preflight.sh  verify-m003-s01-contract.sh  verify-m003-s02-workflow.sh
src/: .gitignore  AGENTS.md  App.svelte  app.css  index.html  main.ts  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts  vitest.config.mts
src-tauri/: .gitignore  AGENTS.md  Cargo.toml  Tauri.toml  build.rs
src-tauri/capabilities/: default.json
src-tauri/src/: AGENTS.md  lib.rs  main.rs  native_uat.rs
src-tauri/src/api/: AGENTS.md  mod.rs
src-tauri/src/api/audio/: mod.rs
src-tauri/src/api/config/: mod.rs
src-tauri/src/api/misc/: mod.rs
src-tauri/src/api/playlist/: mod.rs
src-tauri/src/models/: album.rs  artist.rs  mod.rs  playback_state.rs  playlist.rs  track.rs
src-tauri/src/services/audio/: AGENTS.md  analyzer.rs  audio_player.rs  audio_player_thread.rs  decoder.rs  lyrics.rs  mod.rs  play_queue.rs  player.rs
src-tauri/src/services/playlist/: AGENTS.md  mod.rs  store.rs
src-tauri/src/utils/: mod.rs
src/lib/: types.ts
src/lib/api/: config.ts  library.ts  playback.ts  playlist.ts
src/lib/components/: CoverArt.svelte
src/tests/: album-detail-view.test.ts  albums-view.test.ts  api-adapter-selection.test.ts  app-shell-wiring.test.ts  app-shell.test.ts  artists-view-theme.test.ts  boundary-ownership.test.ts  cover-art-geometry.test.ts  cover-art.test.ts  detail-view-stale-request.test.ts  format-utils.test.ts  library-scan-store.test.ts  now-playing-lyrics-tab.test.ts  now-playing-overlay.test.ts  now-playing-store.test.ts  playback-store.test.ts  player-lyrics.test.ts  player-utility-controls.test.ts  playlist-detail-view.test.ts  queue-list.test.ts  router.test.ts  routes.test.ts  settings-library-scan.test.ts  settings-output-device.test.ts  settings-view.test.ts  shared-playback.test.ts  shell-copy-zh-cn.test.ts  sidebar-layout.test.ts  songs-context-menu.test.ts  songs-list-actions.test.ts  songs-list-selection.test.ts  songs-list-sort-filter.test.ts  songs-table.test.ts  songs-task6-components.test.ts  songs-view.test.ts  summary-selection-guard.test.ts  tauri-config-bridge.test.ts  tauri-library-bridge.test.ts  tauri-playback-bridge.test.ts  tauri-playlist-bridge.test.ts  (+5 more)
(+69 files in other folders)
