[package]
name = "music-player-rs"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
description = "A cross-platform music player built with Rust and Tauri"
repository = "https://github.com/yourusername/music-player-rs"
license = "MIT"
edition = "2024"

[features]
default = ["tauri"]

[dependencies]
# Core
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.7", features = ["preserve_order"] }

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Audio processing
rodio = { version = "0.17.1", features = ["flac", "mp3", "vorbis"] }
symphonia = { version = "0.5.0", features = ["mp3", "flac", "aac", "alac", "wav"] }

# File handling
walkdir = "2.3"
filetime = "0.2"
notify = "6.0"

# Utilities
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
dirs = "6.0"

# Tauri
tauri = { version = "1.5.0", features = ["dialog-open", "shell-open", "updater"] }

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dev-dependencies]
assert_matches = "1.5"
tempfile = "3.3"

[workspace]
members = [
    "src-tauri",
]
resolver = "2"
