[package]
name = "music-player-rs"
version = "0.1.0"
description = "A cross-platform music player built with Tauri"
authors = ["Xing Zhang <angeiv.zhang@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/angeiv/myMusicPlayer-rs"
edition = "2024"
rust-version = "1.94"

[lib]
name = "music_player_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "music-player-rs"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = ["config-toml"] }

[dependencies]
# Tauri
tauri = { version = "2.0.0", features = [
    "tray-icon",
    "wry",
], default-features = false }

# Tauri Plugins
tauri-plugin-log = { version = "2.0.0" }
tauri-plugin-shell = { version = "2.0.0" }
tauri-plugin-dialog = { version = "2.0.0" }
tauri-plugin-fs = { version = "2.0.0" }
tauri-plugin-http = { version = "2.0.0" }
tauri-plugin-notification = { version = "2.0.0" }

# Core dependencies
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
## Enable Symphonia decoders for the main set of lossless/lossy formats.
symphonia = { version = "0.5", features = [
    "aac",
    "alac",
    "flac",
    "isomp4",
    "mp3",
    "pcm",
    "vorbis",
    "wav",
] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
thiserror = "2.0"
env_logger = "0.11"
dirs = "6.0"
parking_lot = "0.12"
rodio = "0.20"
crossbeam-channel = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
lofty = "0.22.4"
walkdir = "2.5.0"
rayon = "1.10.0"
rustfft = "6.0"
realfft = "3.0"
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[dev-dependencies]
tempfile = "3.20.0"

# Security: Override the unmaintained gtk-rs `webkit2gtk` crate line pulled in via
# `wry`/`tauri-runtime-wry` on Linux. GitHub advisory GHSA-wrw7-89jp-8q8g impacts
# `glib >=0.15,<0.20`; the old `webkit2gtk` stack pulls `glib 0.18.x`.
#
# Tauri maintains a republished `tauri-webkit2gtk` crate that tracks newer gtk-rs
# core crates. Patch the dependency graph to use it while keeping the dependency
# key as `webkit2gtk` so upstream crates (wry/tauri) continue to compile.
[patch.crates-io]
# Security: Backport the upstream fix for GHSA-wrw7-89jp-8q8g to the `glib 0.18.x`
# line that is pulled by Tauri's Linux GTK/WebKit stack. The upstream ecosystem
# currently pins `glib` < 0.20 via `wry` -> `webkit2gtk` -> `gtk`.
glib = { path = "patches/glib-0.18.5" }
