[package]
name = "music-player-rs"
version = "0.1.0"
description = "A cross-platform music player built with Tauri"
authors = ["Xing Zhang <angeiv.zhang@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/angeiv/myMusicPlayer-rs"
edition = "2024"
rust-version = "1.94"

[lib]
name = "music_player_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "music-player-rs"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = ["config-toml"] }
toml = "1.0.6"

[dependencies]
# Tauri
tauri = { version = "2.10.3", features = [
    "tray-icon",
    "wry",
], default-features = false }

# Tauri Plugins
tauri-plugin-log = { version = "2.8.0" }
tauri-plugin-shell = { version = "2.3.5" }
tauri-plugin-dialog = { version = "2.6.0" }
tauri-plugin-fs = { version = "2.4.5" }
tauri-plugin-http = { version = "2.5.7" }
tauri-plugin-notification = { version = "2.3.3" }

# Core dependencies
anyhow = "1.0.102"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
## Enable Symphonia decoders for the main set of lossless/lossy formats.
symphonia = { version = "0.5.5", features = [
    "aac",
    "alac",
    "flac",
    "isomp4",
    "mp3",
    "pcm",
    "vorbis",
    "wav",
] }
tokio = { version = "1.50.0", features = ["full"] }
futures = "0.3.32"
thiserror = "2.0.18"
env_logger = "0.11.9"
dirs = "6.0.0"
parking_lot = "0.12.5"
rodio = "0.22.2"
crossbeam-channel = "0.5.15"
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
lofty = "0.23.2"
walkdir = "2.5.0"
rayon = "1.11.0"
rustfft = "6.4.1"
realfft = "3.5.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
rand = "0.10.0"
cpal = "0.17.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[dev-dependencies]
tempfile = "3.27.0"
